--- a/jpa-basic/src/main/resources/application.properties
+++ b/jpa-basic/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.username=sa
 spring.datasource.password=sa
 spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.format_sql=true
 
