--- a/jpa-case/build.gradle
+++ b/jpa-case/build.gradle
@@ -1,6 +1,7 @@
 dependencies {
     runtimeOnly 'mysql:mysql-connector-java'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
 }
 
 test {
