--- a/jpa-case/src/main/resources/application.properties
+++ b/jpa-case/src/main/resources/application.properties
@@ -1,11 +1,2 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/samples?useSSL=false&serverTimezone=UTC&useCursors=false&sendStringParametersAsUnicode=false&characterEncoding=UTF8
-spring.datasource.username=root
-spring.datasource.password=pass
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.open-in-view=false
-spring.jpa.properties.hibernate.format_sql=true
-
-logging.level.org.hibernate.sql=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+server.port=8081
+management.endpoints.web.exposure.include=*
