--- a/jpa-querydsl/build.gradle
+++ b/jpa-querydsl/build.gradle
@@ -1,3 +1,7 @@
+plugins{
+    id 'com.ewerk.gradle.plugins.querydsl' version '1.0.10'
+}
+
 dependencies {
     implementation 'com.querydsl:querydsl-jpa'
 }
